# alpha_copilot_2025

./: .env.example  .gitattributes  .gitignore  README.md  README_RU.md  compose.delpoyonmock.yml  compose.localrelease.yml  compose.mac.yml  compose.mock.yml  compose.release.yml  compose.windows.yml  compose.yml  spec.txt
ml/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
ml/api/: app.py
ml/deploy/: Dockerfile  logging.yml
ml/src/ml/: __init__.py  main.py
ml/src/ml/agent/: router.py
ml/src/ml/agent/calls/: model_calls.py  ollama_calls.py
ml/src/ml/agent/graph/: __init__.py  constants.py  logging_utils.py  pipeline.py  state.py
ml/src/ml/agent/prompts/: __init__.py  analysis_prompt.py  analysis_prompt.txt  context_blocks.py  evidence_prompt.py  fast_answer_prompt.py  fast_answer_prompt.txt  mode_decision_prompt.py  planner_prompt.py  planner_prompt.txt  research_answer_prompt.py  research_evidence_summary_prompt.py  research_observation_prompt.py  research_prompt.py  research_prompt.txt  research_reason_prompt.py  research_tool_prompt.py  synthesis_prompt.py  synthesis_prompt.txt  system_prompt.py  tag_define_prompt.py  (+5 more)
ml/src/ml/api/: __init__.py  app.py  app.py.orig  graph_history.py  graph_logging.py  ollama_calls.py  ollama_setup.py  types.py
ml/src/ml/configs/: __init__.py  llm_mode.py  logging.yaml  logging_config.py  message.py  model_config.py  ollama_client_settings.py  runtime_flags.py
ml/src/ml/utils/: __init__.py  download_formatters.py  fetch_model.py  graph_logger.py  openrouter.py  pipeline_data_formatters.py  tag_validation.py  voice_validation.py  warmup.py
ml/src/tests/unit/: test_app.py  test_evidence_node.py  test_fetch_model_utils.py  test_message_config.py  test_model_clients.py  test_model_config.py  test_pipeline.py  test_web_search_tool.py
ml/tests/: test_agent_pipeline.py  test_api_app.py  test_chat_history.py  test_health.py  test_llm_mode.py  test_message_payload.py  test_metadata.py  test_minio_client.py  test_ollama_client_settings.py  test_research_workflow.py  test_startup_endpoints.py  test_tool_registry.py  test_utils_formatters.py  test_workflow_router.py  workflow_test.py
(+527 files in other folders)
