[project]
name = "ml"
version = "0.1.0"
description = "Basic project for agent-hackathones"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.120.0",
    "logging>=0.4.9.6",
    "ollama>=0.6.0",
    "pytest>=8.4.2",
    "python-json-logger>=4.0.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]

[tool.uv.build-backend]
module-root = "src"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
