[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FRIZFOREVER", email = "kirillhromov@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "langgraph>=1.0.4",
    "ollama>=0.6.1",
    "beautifulsoup4>=4.12.3",
    "duckduckgo-search>=6.3.7",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=8.3.3",
    "uvicorn>=0.38.0",
    "websockets>=14.1",
]

[project.scripts]
ml = "ml.main:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 101
target-version = "py312"

[tool.ruff.lint]
# PEP8-ish: E/W (pycodestyle), F (pyflakes), B (bugbear), I (imports)
select = ["E", "W", "F", "B", "I"]
ignore = []

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]

